--- a/src/scss/blocks/body.scss
+++ b/src/scss/blocks/body.scss
@@ -2,5 +2,10 @@ html {
   scroll-behavior: smooth;
 }
 body {
+  background-color: #111;
+  color: #f0f8ff;
   font-family: sans-serif;
+  font-size: 2rem;
+  margin: 0 auto;
+  max-width: 500px;
 }
