--- a/src/scss/config/variables.scss
+++ b/src/scss/config/variables.scss
@@ -1,5 +1,7 @@
 :root {
-  /* Variables CSS */
+  --color-incorrect: #757575;
+  --color-present: #e4a81d;
+  --color-correct: #43a047;
+  --color-error: #bb3429;
 }
-
 /* Variables SASS */
