--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,3 +2,8 @@
 @use 'base/initial-reset.scss';
 @use 'config/variables.scss';
 @use 'blocks/body.scss';
+@use 'blocks/main.scss';
+@use 'blocks/pop-up.scss';
+@use 'blocks/texts.scss';
+@use 'blocks/game-board.scss';
+@use 'blocks/restart.scss';
