--- a/src/scss/config/variables.scss
+++ b/src/scss/config/variables.scss
@@ -1,7 +1,6 @@
 :root {
-  --color-incorrect: #757575;
+  --color-incorrect: #757575bd;
   --color-present: #e4a81d;
   --color-correct: #43a047;
-  --color-error: #bb3429;
 }
 /* Variables SASS */
