--- a/src/scss/blocks/body.scss
+++ b/src/scss/blocks/body.scss
@@ -2,8 +2,8 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  background-color: #111;
-  color: #f0f8ff;
+  background-color: #e9eaf4;
+  color: #524d88;
   font-family: sans-serif;
   font-size: 2rem;
   margin: 0 auto;
