--- a/src/scss/blocks/game-board.scss
+++ b/src/scss/blocks/game-board.scss
@@ -7,8 +7,8 @@
 }
 
 .letter-box {
-  border: 2px solid gray;
-  border-radius: 3px;
+  border: 2px solid #524d88;
+  border-radius: 8px;
   margin: 2px;
   font-size: 2.5rem;
   font-weight: 700;
@@ -25,11 +25,13 @@
 }
 
 .input {
-  background: none;
+  background: #f7f8fd;
   border: none;
-  border-bottom: 1px solid #ccc;
-  color: #ccc;
-  font-size: 2rem;
+  border: 1px solid #f7f8fd;
+  border-radius: 6px;
+  padding: 13px 14px;
+  color: rgba(204, 204, 204, 0.5) D88;
+  font-size: 18px;
   outline: none;
   width: 320px;
   text-align: center;
