--- a/src/scss/blocks/restart.scss
+++ b/src/scss/blocks/restart.scss
@@ -1,9 +1,17 @@
 .restart {
-  font-size: 1rem;
-  margin-top: 20px;
+  margin-top: 40px;
   margin-inline: auto;
-  padding: 0.3125rem;
   display: none;
+
+  padding: 0.75rem 1.875rem;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  color: #545454;
+  border: 0.0625rem solid #545454;
+  border-radius: 0.375rem;
+  background-color: transparent;
 }
 
 .d-block {
